prevent user from selecting text to avoid popups on mobile when pressing buttons

--- a/Games/Simple clicker/styles.css
+++ b/Games/Simple clicker/styles.css
@@ -38,6 +38,8 @@ body {
 	color: var(--primary-text);
 	-webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  user-select: none;
 }
 
 .game-area {
